# BloodHorn

./: BloodHorn.dsc  BloodHorn.fdf  BloodHorn.inf  CMakeLists.txt  CNAME  CONFIG.md  INSTALL.md  Makefile  README.md  SECURITY.md  Tribute.md  USAGE.md  bios_main.c  compat.h  main.c
.github/workflows/: build.yml
bios/: bootsector.asm  stage2_loader.asm  stage2_loader.c
boot/: localization.c  localization.h  menu.c  menu.h  mouse.c  mouse.h  secure.c  secure.h  theme.c  theme.h
boot/Arch32/: aarch64.c  aarch64.h  chainload.c  chainload.h  ia32.c  ia32.h  limine.c  limine.h  linux.c  linux.h  loongarch64.c  loongarch64.h  multiboot1.c  multiboot1.h  multiboot2.c  multiboot2.h  riscv64.c  riscv64.h  x86_64.c  x86_64.h
boot/Arch32/BloodChain/: asm.h  bloodchain.c  bloodchain.h  bootstrap.asm  stage2.asm
config/: config_env.c  config_env.h  config_ini.c  config_ini.h  config_json.c  config_json.h  config_validate.c  config_validate.h
docs/: BloodChain-Protocol.md  Index.html
fs/: ext2.c  ext2.h  fat32.c  fat32.h  fs_common.c  fs_common.h  fs_mount.c  fs_mount.h  iso9660.c  iso9660.h
multiboot/: multiboot2.h  multiboot2_loader.c
net/: arp.c  arp.h  dhcp.c  dhcp.h  net_utils.c  net_utils.h  pxe.c  pxe.h  pxe_rm.asm  tftp.c  tftp.h
plugins/: plugin.c  plugin.h  plugin_loader.c  plugin_loader.h  plugin_registry.c  plugin_registry.h
recovery/: shell.c  shell.h  shell_cmds.c  shell_cmds.h  shell_fs.c  shell_fs.h  shell_history.c  shell_history.h  shell_net.c  shell_net.h
scripting/: lua.c  lua.h  script_api.c  script_api.h  script_env.c  script_env.h  script_loader.c  script_loader.h
security/: aes.c  aes.h  crypto.c  crypto.h  entropy.c  entropy.h  hmac.c  hmac.h  secure_boot.c  secure_boot.h
uefi/: graphics.c  graphics.h  uefi.c
